# VoxelEngine

./: .gitignore  Cargo.toml  README.md  enable_mario.bat
assets/materials/: core.toml
assets/shaders/: bloom.wgsl  grass.wgsl  mario.wgsl  mesh_compute.wgsl  post.wgsl  postprocess.wgsl  shadow.wgsl  ssao.wgsl  voxel.wgsl
crates/vox-app/: Cargo.toml
crates/vox-app/examples/: stress.rs
crates/vox-app/src/: args.rs  audio.rs  body_mesh.rs  chunk_loader.rs  ecs_components.rs  grass.rs  main.rs  mario.rs  particles.rs  remesh.rs  systems.rs  tools.rs
crates/vox-core/src/: consts.rs  material.rs  tunables.rs
crates/vox-debug/src/: lib.rs  panels.rs
crates/vox-ecs/: Cargo.toml
crates/vox-ecs/src/: lib.rs
crates/vox-gen/src/: lib.rs  noise.rs  trees.rs
crates/vox-mesh/src/: greedy.rs  slab.rs
crates/vox-physics/src/: body.rs  body_destruction.rs  character.rs  contact.rs  destruction.rs  lib.rs  solver.rs
crates/vox-render/: Cargo.toml
crates/vox-render/src/: bloom_ssao.rs  gpu.rs  grass_pipeline.rs  lib.rs  mario_pipeline.rs  particles.rs  post_pipeline.rs  postprocess.rs  voxel_pipeline.rs
crates/vox-render/tests/: shader_validate.rs
crates/vox-sim/: Cargo.toml
crates/vox-sim/src/: fire.rs  fluid.rs  lib.rs  weathering.rs
crates/vox-sm64/: Cargo.toml  build.rs
crates/vox-sm64/src/: ffi.rs  lib.rs  surface.rs
crates/vox-world/src/: lib.rs  world.rs
docs/: ideas.md
docs/plans/: 2026-07-04-voxel-engine-mvp.md  2026-07-04-voxel-engine-mvp.md.tasks.json  2026-07-09-fire-system-design.md  2026-07-09-fluid-sim-design.md  2026-07-09-fluid-sim.md  2026-07-09-fluid-sim.md.tasks.json  2026-07-09-powder-design.md  2026-07-09-water-refinement-design.md  2026-07-09-water-refinement.md  2026-07-09-water-refinement.md.tasks.json  2026-07-10-bloom-ssao.md  2026-07-10-bloom-ssao.md.tasks.json  2026-07-10-chunk-gen-polish-design.md  2026-07-10-ecs-design.md  2026-07-10-seamless-world-generation-design.md  2026-07-10-seamless-world-generation.md  2026-07-10-seamless-world-generation.md.tasks.json  2026-07-10-water-pollution.md  2026-07-10-water-pollution.md.tasks.json  2026-07-11-rope-joints-design.md
notes/: gameplay-ideas.md  physics-ideas-round2.md  rendering-ideas-round2.md  rendering-ideas.md  tech-architect-ideas.md
