[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.92"

[workspace.dependencies]
vox-core = { path = "crates/vox-core" }
vox-world = { path = "crates/vox-world" }
vox-gen = { path = "crates/vox-gen" }
vox-mesh = { path = "crates/vox-mesh" }
vox-physics = { path = "crates/vox-physics" }
vox-sim = { path = "crates/vox-sim" }
vox-render = { path = "crates/vox-render" }
vox-platform = { path = "crates/vox-platform" }
vox-debug = { path = "crates/vox-debug" }

wgpu = { version = "0.20.1", features = ["wgsl"] }
winit = { version = "0.29", features = ["rwh_06"] }
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"
glam = { version = "0.28", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pollster = "0.3"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 4   # 1 exhausts the Windows paging file on this machine
