[package]
name = "vox-app"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
mario = [
    "dep:cpal",
    "dep:vox-sm64",
    "vox-render/mario",
    "vox-sm64/native",
]

[dependencies]
vox-core = { workspace = true }
vox-world = { workspace = true }
vox-gen = { workspace = true }
vox-mesh = { workspace = true }
vox-physics = { workspace = true }
vox-render = { workspace = true }
vox-platform = { workspace = true }
vox-sm64 = { workspace = true, optional = true }
vox-debug = { workspace = true }
vox-sim = { workspace = true }
vox-ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
cpal = { version = "0.15", optional = true }
