[package]
name = "vox-render"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vox-core = { workspace = true }
vox-mesh = { workspace = true }
vox-sm64 = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
naga = "0.20.0"
