[package]
name = "vox-sm64"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
glam = { workspace = true }
vox-core = { workspace = true }
vox-world = { workspace = true }
tracing = { workspace = true }
sha1 = "0.10"

[build-dependencies]
cc = "1.2"
